# cpp_project_in_github

./: .gitmodules  CMakeLists.txt  LICENSE  NOTICE.md  README.md  main.cpp
.github/workflows/: cmake_arm.yml  cmake_x64.yml  codeql-analysis.yml
calculator/: CMakeLists.txt  calculator.cpp  calculator.h
cmakes/: compile_option.cmake
test/: CMakeLists.txt
test/calculator/: CMakeLists.txt  test_calculator.cpp
test/main/: CMakeLists.txt  test_main.cpp
